# flyline

./: .gitignore  .gitmodules  .output_err.txt.swp  AGENTS.md  BINARY_SIZE_ANALYSIS.md  Cargo.toml  Dockerfile  Dockerfile.glibc227  Dockerfile.glibc231  README.md  RELEASE-CHECKLIST.md  build.rs  build.sh  debug_cells.py  debug_cells.rs  docker-bake.hcl  docker_build.sh  flyline_help.txt  flyline_notes  install.sh  kitty_graphics_protocol.rst  output_err.txt  research.md  run-perf-session.sh  test.sh  test_rc.sh
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/prompts/: docs-check.prompt.md
.github/workflows/: ci.yml  copilot-docs-check.yml  flycomp-ci.yml  flycomp-release.yml  generate-demos.yml  generate-gif.yml  release.yml  update-settings-docs.yml
assets/: provenance.json
assets/tapes/: demo_fuzzy_suggestions.tape  demo_main.tape  demo_overview.tape  demo_prompts_ps1.tape  demo_prompts_ps1_fill.tape  demo_prompts_rps1.tape  demo_settings.tape  demo_setup.tape
behaviours/: cat_test.sh  forking.sh  strace_with_-echo.txt  test_1.sh  test_2.sh  test_3.sh  test_3_based_activate.sh  test_4.sh  test_5.sh  test_6.sh  test_7.sh  test_8.sh
behaviours/client_server/: client.sh  server.sh
custom_builtin/: Makefile  README.md  counter.c  test.rc  test_counter.sh  test_setinput.sh
docker/: Dockerfile.builder  Dockerfile.ubuntu.template  Dockerfile.vhs  README.md  bash_integration_test.Dockerfile  builder.Dockerfile  claude  cross-aarch64-linux-gnu.Dockerfile  cross-armv7-linux-gnueabihf.Dockerfile  cross-x86_64-linux-gnu.Dockerfile  demo_agent_mode.Dockerfile  demo_auto_tab_completion.Dockerfile  demo_base.Dockerfile  demo_base.tape  demo_custom_animation.Dockerfile  demo_fuzzy_history.Dockerfile  demo_fuzzy_path_suggestions.Dockerfile  demo_fuzzy_suggestions.Dockerfile  demo_fuzzy_suggestions.tape  demo_inline_history.Dockerfile  demo_ls_colors.Dockerfile  demo_main.Dockerfile  demo_main.tape  demo_overview.Dockerfile  demo_prompts.Dockerfile  demo_prompts.tape  demo_tab_completion_easing.Dockerfile  docker-bake.hcl  docker_build.sh  docker_build_gha.sh  docker_lib_tests.sh  flyline_help.Dockerfile  install_test_alpine.Dockerfile  install_test_bash_3.2.57.Dockerfile  install_test_ubuntu.Dockerfile  integration_test_build.Dockerfile  release_builder.Dockerfile  specific_bash_version.Dockerfile  tab_completions.Dockerfile  ubuntu_integration_test.Dockerfile  (+3 more)
docs/: threads_and_locking.md
examples/: agent_mode.sh  ai_command.sh  animations.sh  settings.sh  widgets.sh
flycomp/: AGENTS.md  Cargo.toml  install.sh
flycomp/src/: lib.rs  main.rs  man.rs  parse_help.rs  parse_man.rs
patches/ansi-to-tui/: Cargo.toml
patches/ansi-to-tui/src/: code.rs  error.rs
patches/ratatui-core/: Cargo.toml
patches/ratatui-core/src/: lib.rs
src/: activate.sh  active_suggestions.rs  agent_mode.rs  ai_command.rs  app.rs  auto_close.rs  bash_coms.rs  bash_env_manager.rs  bash_funcs.rs  bash_symbols.rs  changelog.rs  cli.rs  command_acceptance.rs  command_rebuild.rs  comp_spec_synthesis.rs  conch_parser_test.rs  content_builder.rs  content_utils.rs  cursor.rs  cursor_animation.rs  dparser.rs  events.rs  flash_testing.rs  frame_builder.rs  globbing.rs  history.rs  iter_first_last.rs  kill_on_drop_child.rs  layout_manager.rs  lexer.rs  lexing.rs  lib.rs  logging.rs  macros.rs  main.rs  mouse_state.rs  palette.rs  pallete.rs  perf.rs  prompt_manager.rs  (+13 more)
src/app/: actions.rs  auto_close.rs  buffer_format.rs  formated_buffer.rs  formatted_buffer.rs  mod.rs  tab_completion.rs  ui.rs
src/app/actions/: keyboard.rs  mod.rs  mouse.rs
tapes/: demo_agent_mode.tape  demo_auto_tab_completion.tape  demo_custom_animation.tape  demo_flycomp.tape  demo_fuzzy_history.tape  demo_fuzzy_path_suggestions.tape  demo_fuzzy_suggestions.tape  demo_inline_history.tape  demo_ls_colors.tape  demo_overview.tape  demo_prompts_final.tape  demo_prompts_ps1.tape  demo_prompts_ps1_fill.tape  demo_prompts_rps1.tape  demo_settings.tape  demo_setup.tape  demo_tab_completion_easing.tape
tests/: completion_util.sh  docker_integration_tests.rs  kitty_cursor_demo.py  non_interactive_use.sh  osc52_demo.py  tab_completions.rs  tab_completions_tests.rs
tests/common/: mod.rs
tests/docker_integration_tests/: Dockerfile.bash_latest  Dockerfile.ubuntu.18.04  Dockerfile.ubuntu.20.04  Dockerfile.ubuntu.22.04  Dockerfile.ubuntu.template  README.md  generate_dockerfiles.sh  test_bashrc.sh
tests/help_texts/git/: help.txt
tests/help_texts/git/commit/: help.txt
tests/help_texts/git_with_remote/: help.txt
tests/man_pages/: bash.1
