[package]
name = "ratatui-core"
version = "0.1.0"
edition = "2024"
description = "Shim that re-exports the custom ratatui-core fork so crates.io consumers (e.g. ansi-to-tui) share the same ratatui-core types as the rest of the project."
license = "MIT"

# Re-export the custom Marlinski ratatui-core fork under the crates.io version
# number (0.1.0) so that [patch.crates-io] can redirect all crates.io users of
# ratatui-core to the same types used by the project's ratatui fork.
[dependencies]
ratatui-core-impl = { git = "https://github.com/Marlinski/ratatui.git", rev = "fd8e0f024847af467129e0a166390d7e291c1b2e", package = "ratatui-core", features = ["std", "layout-cache"] }

[features]
default = []
std = []
layout-cache = []
anstyle = []
palette = []
underline-color = []
scrolling-regions = []
serde = []
